--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 remote_theme : TaylanTatli/Moon
 # Site
-title:              Moon
-bio:                'Minimal, one column jekyll theme.'
-description:        "Moon is a minimal, one column jekyll theme for your blog."
+title:              Hokwon Lee
+bio:                '코딩연습하는 블로그'
+description:        "하루하루 를 심어봅시다."
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/logo.png'
