--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ remote_theme : TaylanTatli/Moon
 # Site
 title:              Hokwon Lee
 bio:                '코딩연습하는 블로그'
-description:        "하루하루 를 심어봅시다."
+description:        "하루하루 잔디를 심어봅시다."
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/logo.png'
